[package]
name = "introvert"
version = "0.1.0"
edition = "2024"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.13.0" }
eyre = "0.6.12"
reqwest = "0.12.23"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
tokio = "1.47.1"
tracing = "0.1.41"
